# faust2rnaa

./: CLAUDE.md  README.md  faust2rnaa.mjs  package.json  rnaa.arch
.claude/: settings.local.json
.github/workflows/: rnaa-compat.yml
templates/: README.md  __PACKAGE_NAME__.podspec  app.plugin.js  package.json  react-native.config.js
templates/android/: CMakeLists.txt  build.gradle
templates/android/src/main/: AndroidManifest.xml
templates/android/src/main/java/com/__CODEGEN_NAME__/: __PASCAL_NAME__Package.java
templates/ios/: NativeAudioProcessingModuleProvider.h  NativeAudioProcessingModuleProvider.mm
templates/shared/: NativeAudioProcessingModule.cpp  NativeAudioProcessingModule.h  ProcessorInstaller.h  __NODE_NAME__.cpp  __NODE_NAME__.h  __NODE_NAME__HostObject.cpp  __NODE_NAME__HostObject.h
templates/specs/: NativeAudioProcessingModule.ts
templates/src/: NativeAudioProcessingModule.ts
test/fixtures/: test_synth.dsp
